# wimokn.dev

./: .gitignore  Cargo.toml  Dockerfile.arm64  LICENSE  README.md
src/: main.rs  routes.rs  server.rs
src/tests/: tests.rs
static/css/: style.css  themes.css
static/js/: chatbot.js  cmds.js  config.js  err.js  script.js
static/js/cmds/: about.js  clear.js  date.js  donate.js  help.js  history.js  info.js  projects.js  theme.js  weather.js
templates/: index.html.tera
templates/error/: 500.html.tera
